[project]
name = "stellar-sdk"
version = "12.3.0"
description = "The Python Stellar SDK library provides APIs to build transactions and connect to Horizon and Soroban-RPC server."
authors = [
    { name = "overcat", email = "4catcode@gmail.com" },
    { name = "Eno", email = "appweb.cn@gmail.com" },
]
maintainers = [{ name = "overcat", email = "4catcode@gmail.com" }]
readme = "README.rst"
keywords = [
    "stellar-sdk",
    "stellar",
    "stellar.org",
    "lumens",
    "xlm",
    "blockchain",
    "distributed exchange",
    "cryptocurrency",
    "dex",
    "horizon",
    "soroban",
    "sdex",
    "trading",
    "soroban",
    "soroban-rpc",
]
license = "Apache License 2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "PyNaCl (>=1.4.0,<2.0.0)",
    "requests (>=2.0.0,<3.0.0)",
    "mnemonic (>=0.20)",
    "toml (>=0.10.2,<1.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "xdrlib3 (>=0.1.1)",
    "requests-sse (>=0.3,<0.6)",
    "typing-extensions (>=4.0.0,<5.0.0)",
]

[project.urls]
Homepage = "https://github.com/StellarCN/py-stellar-base"
Documentation = "https://stellar-sdk.readthedocs.io/"
Repository = "https://github.com/StellarCN/py-stellar-base"
Issues = "https://github.com/StellarCN/py-stellar-base/issues"
Changelog = "https://github.com/StellarCN/py-stellar-base/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/StellarCN/py-stellar-base/issues"

[project.optional-dependencies]
aiohttp = ["aiohttp (>=3.9.1,<4.0.0)", "aiohttp-sse-client (>=0.2.1)"]
shamir = ["shamir-mnemonic (>=0.3.0,<1.0.0)"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.4.0"
pytest-asyncio = "^0.24.0"
pytest-httpserver = "^1.1.1"
requests-mock = "^1.12.1"
aioresponses = { git = "https://github.com/pnuckowski/aioresponses.git", rev = "b83af203d5550006fd2328af230c2d93e36c6cb1" }

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = false

[tool.coverage.run]
source = ["stellar_sdk/", "tests/"]

[tool.coverage.report]
omit = ["stellar_sdk/xdr/*"]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "def __repr__",
    "def __str__",
    "if self\\.debug",
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
