[project]
name = "stellar-sdk"
description = "The Python Stellar SDK library provides APIs to build transactions and connect to Horizon and Stellar RPC server."
authors = [
    { name = "overcat", email = "4catcode@gmail.com" },
    { name = "Eno", email = "appweb.cn@gmail.com" },
]
dynamic = ["version"]
maintainers = [{ name = "overcat", email = "4catcode@gmail.com" }]
readme = "README.md"
keywords = [
    "stellar-sdk",
    "stellar",
    "stellar.org",
    "lumens",
    "xlm",
    "blockchain",
    "distributed exchange",
    "cryptocurrency",
    "dex",
    "horizon",
    "soroban",
    "sdex",
    "trading",
    "soroban",
    "soroban-rpc",
    "stellar-rpc",
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "mnemonic>=0.20",
    "pydantic>=2.0.0",
    "pynacl>=1.4.0",
    "requests>=2.0.0",
    "requests-sse>=0.3",
    "toml>=0.10.2; python_version < '3.11'",
    "typing-extensions>=4.0.0",
    "xdrlib3>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/StellarCN/py-stellar-base"
Documentation = "https://stellar-sdk.readthedocs.io/"
Repository = "https://github.com/StellarCN/py-stellar-base"
Issues = "https://github.com/StellarCN/py-stellar-base/issues"
Changelog = "https://github.com/StellarCN/py-stellar-base/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/StellarCN/py-stellar-base/issues"

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9.1", "aiohttp-sse-client>=0.2.1"]
shamir = ["shamir-mnemonic>=0.3.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpserver>=1.1.1",
    "requests-mock>=1.12.1",
    "aioresponses>=0.7.8",
    "pre-commit>=3.5.0",
    "pyright>=1.1.402",
    "mypy>=1.14.1",
    "types-requests>=2.32.0.20241016",
    "types-toml>=0.10.8.20240310; python_version < '3.11'",
]
docs = [
    "autodoc-pydantic>=2.1.0",
    "sphinx>=7.1.2",
    "sphinx-autodoc-typehints>=2.0.1",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
show_error_codes = true
warn_unused_configs = true

[tool.coverage.run]
source = ["stellar_sdk/", "tests/"]

[tool.coverage.report]
omit = ["stellar_sdk/xdr/*"]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "def __repr__",
    "def __str__",
    "if self\\.debug",
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["stellar_sdk", "tests", "examples"]
